<resources>
    <string name="app_name">QuickWash</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="order">Your Orders</string>
    <string name="contact">About Us</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="available_service">Available services and price</string>
    <string name="place_order">PLACE  ORDER</string>
    <string name="your_order">Your orders :</string>

    <string name="title_activity_place_order">Place Order</string>

    <string name="enter_details">Enter your details below :</string>
    <string name="name">Name *</string>
    <string name="mobile">Mobile *</string>
    <string name="alternate_mob">Alternate Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address *</string>
    <string name="confirm_order">CONFIRM  ORDER</string>

    <string name="wi">Wash + Iron</string>
    <string name="wi_desc">17 Rs per piece [min 10 pieces]-59 Rs per kg</string>

    <string name="w">Wash + Fold</string>
    <string name="w_desc">10 Rs per piece [min 20 pieces]-39 Rs per kg</string>

    <string name="i">Iron</string>
    <string name="i_desc">8 Rs per piece [min 20 pieces]</string>

    <string name="dc">Dry Clean</string>
    <string name="dc_desc">30 Rs per piece [min 10 pieces]</string>

    <string name="reach_us">Reach Us</string>
    <string name="contact_mobile">9164065688</string>
    <string name="contact_email">quickwashbangalore@gmail.com</string>

</resources>
